{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 239,
  "lineage": "01ba2572-8694-b557-6e50-ac13448fad72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SonarQubesinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:735972722491:instance/i-0d55687f7a68fd883",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d55687f7a68fd883",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins-sonar",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c0f2bef616b36657",
            "private_dns": "ip-150-0-0-58.us-east-2.compute.internal",
            "private_ip": "150.0.0.58",
            "public_ip": "3.133.132.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0823e74e7c12eae5b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b20431b259209b8",
            "tags": {
              "Name": "SonarQubesinstance"
            },
            "tags_all": {
              "Name": "SonarQubesinstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01bdb81ab9fa71b04"
            ]
          },
          "dependencies": [
            "aws_security_group.fleur-public-security-group",
            "aws_subnet.fleur-public-subnet",
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkinsinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:735972722491:instance/i-048144a1cc576ed57",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048144a1cc576ed57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins-sonar",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06eb7d989c8228e48",
            "private_dns": "ip-150-0-0-249.us-east-2.compute.internal",
            "private_ip": "150.0.0.249",
            "public_ip": "3.145.169.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0f6bcde58ca9c9a7e",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b20431b259209b8",
            "tags": {
              "Name": "Master-node"
            },
            "tags_all": {
              "Name": "Master-node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01bdb81ab9fa71b04"
            ]
          },
          "dependencies": [
            "aws_security_group.fleur-public-security-group",
            "aws_subnet.fleur-public-subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:735972722491:instance/i-02330ca6e1c9e4764",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02330ca6e1c9e4764",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins-sonar",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03b3a72fcefd7a09f",
            "private_dns": "ip-150-0-0-169.us-east-2.compute.internal",
            "private_ip": "150.0.0.169",
            "public_ip": "18.217.76.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0c0e8963d6f210953",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b20431b259209b8",
            "tags": {
              "Name": "agen1"
            },
            "tags_all": {
              "Name": "agen1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01bdb81ab9fa71b04"
            ]
          },
          "dependencies": [
            "aws_security_group.fleur-public-security-group",
            "aws_subnet.fleur-public-subnet",
            "aws_vpc.fleur-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fleur-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:internet-gateway/igw-038fd7a3b399c435f",
            "id": "igw-038fd7a3b399c435f",
            "owner_id": "735972722491",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0f0e077558368f636"
          },
          "dependencies": [
            "aws_vpc.fleur-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fleur-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:route-table/rtb-0be0ed4972552415b",
            "id": "rtb-0be0ed4972552415b",
            "owner_id": "735972722491",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e077558368f636"
          },
          "dependencies": [
            "aws_vpc.fleur-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fleur-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:route-table/rtb-072064b45b1609d20",
            "id": "rtb-072064b45b1609d20",
            "owner_id": "735972722491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038fd7a3b399c435f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e077558368f636"
          },
          "dependencies": [
            "aws_internet_gateway.fleur-gateway",
            "aws_vpc.fleur-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fleur-private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c71ef4235ee9ac5",
            "route_table_id": "rtb-0be0ed4972552415b",
            "subnet_id": "subnet-0988fcd82452ab8c1"
          },
          "dependencies": [
            "aws_route_table.fleur-private-route-table",
            "aws_subnet.fleur-private-subnet",
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bac11b5b7f499b0",
            "route_table_id": "rtb-0be0ed4972552415b",
            "subnet_id": "subnet-076bdab1e7e63b242"
          },
          "dependencies": [
            "aws_route_table.fleur-private-route-table",
            "aws_subnet.fleur-private-subnet",
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fleur-public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0dff1fb2753120f",
            "route_table_id": "rtb-072064b45b1609d20",
            "subnet_id": "subnet-01b20431b259209b8"
          },
          "dependencies": [
            "aws_internet_gateway.fleur-gateway",
            "aws_route_table.fleur-public-route-table",
            "aws_subnet.fleur-public-subnet",
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a1c7d06b6d0cc8e",
            "route_table_id": "rtb-072064b45b1609d20",
            "subnet_id": "subnet-0ed4523c42a66bd1c"
          },
          "dependencies": [
            "aws_internet_gateway.fleur-gateway",
            "aws_route_table.fleur-public-route-table",
            "aws_subnet.fleur-public-subnet",
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0204f02bc47f94caa",
            "route_table_id": "rtb-072064b45b1609d20",
            "subnet_id": "subnet-09f07bf9c12261b3a"
          },
          "dependencies": [
            "aws_internet_gateway.fleur-gateway",
            "aws_route_table.fleur-public-route-table",
            "aws_subnet.fleur-public-subnet",
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fleur-private-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:security-group/sg-0a78ba5b093749477",
            "description": "Allow SSH and Postgresql traffic",
            "egress": [],
            "id": "sg-0a78ba5b093749477",
            "ingress": [
              {
                "cidr_blocks": [
                  "150.0.0.0/16"
                ],
                "description": "Allow Postgres traffic",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "150.0.0.0/16"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Private access",
            "name_prefix": "",
            "owner_id": "735972722491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-security-group"
            },
            "tags_all": {
              "Name": "private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e077558368f636"
          },
          "dependencies": [
            "aws_vpc.fleur-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fleur-public-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:security-group/sg-01bdb81ab9fa71b04",
            "description": "Allow TCP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bdb81ab9fa71b04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 443",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 443",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "150.0.0.0/24",
                  "71.163.242.34/32"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "150.0.0.0/24"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Public access",
            "name_prefix": "",
            "owner_id": "735972722491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-security-group"
            },
            "tags_all": {
              "Name": "public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e077558368f636"
          },
          "dependencies": [
            "aws_subnet.fleur-public-subnet",
            "aws_vpc.fleur-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fleur-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:subnet/subnet-0988fcd82452ab8c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "150.0.1.0/24",
            "id": "subnet-0988fcd82452ab8c1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735972722491",
            "tags": {
              "Name": "fleur-private-subnet_1"
            },
            "tags_all": {
              "Name": "fleur-private-subnet_1"
            },
            "vpc_id": "vpc-0f0e077558368f636"
          },
          "dependencies": [
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:subnet/subnet-076bdab1e7e63b242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "150.0.3.0/24",
            "id": "subnet-076bdab1e7e63b242",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735972722491",
            "tags": {
              "Name": "fleur-private-subnet_2"
            },
            "tags_all": {
              "Name": "fleur-private-subnet_2"
            },
            "vpc_id": "vpc-0f0e077558368f636"
          },
          "dependencies": [
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fleur-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:subnet/subnet-01b20431b259209b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "150.0.0.0/24",
            "id": "subnet-01b20431b259209b8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735972722491",
            "tags": {
              "Name": "fleur-public-subnet_1"
            },
            "tags_all": {
              "Name": "fleur-public-subnet_1"
            },
            "vpc_id": "vpc-0f0e077558368f636"
          },
          "dependencies": [
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:subnet/subnet-0ed4523c42a66bd1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "150.0.2.0/24",
            "id": "subnet-0ed4523c42a66bd1c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735972722491",
            "tags": {
              "Name": "fleur-public-subnet_2"
            },
            "tags_all": {
              "Name": "fleur-public-subnet_2"
            },
            "vpc_id": "vpc-0f0e077558368f636"
          },
          "dependencies": [
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:subnet/subnet-09f07bf9c12261b3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "150.0.4.0/24",
            "id": "subnet-09f07bf9c12261b3a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735972722491",
            "tags": {
              "Name": "fleur-public-subnet_3"
            },
            "tags_all": {
              "Name": "fleur-public-subnet_3"
            },
            "vpc_id": "vpc-0f0e077558368f636"
          },
          "dependencies": [
            "aws_vpc.fleur-vpc",
            "data.aws_availability_zones.fleur-zone"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fleur-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735972722491:vpc/vpc-0f0e077558368f636",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "150.0.0.0/16",
            "default_network_acl_id": "acl-009a0be64d7f1c897",
            "default_route_table_id": "rtb-02b3052a15d8004d6",
            "default_security_group_id": "sg-07c34badedd6c41b8",
            "dhcp_options_id": "dopt-1749c77c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f0e077558368f636",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02b3052a15d8004d6",
            "owner_id": "735972722491",
            "tags": {
              "Name": "fleur-vpc"
            },
            "tags_all": {
              "Name": "fleur-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}